Fix spacing error by adding 'white-space: pre-line' css property to post display

--- a/client/src/app/pages/home/home.component.scss
+++ b/client/src/app/pages/home/home.component.scss
@@ -127,6 +127,7 @@ button {
 .post-content {
     text-align: left;
     width: 100%;
+    white-space: pre-line;
 }
 
 @media screen and (max-width: 690px) {
